$Id$

2017-12-27  Douglas Gilbert  <dgilbert@interlog.com>

	os_freebsd.cpp: on error was setting set_nvme_err() to 1,
	not the actual NVMe status value; fix.

2017-12-24  Alex Samorukov  <samm@os2.kiev.ua>
	CircleCI: add FreeBSD cross compilation

2017-12-22  Alex Samorukov  <samm@os2.kiev.ua>
	configure.ac: add -lsbuf to FreeBSD libs to fix static builds.

2017-12-21  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: Start some JSON work. Other cleanups and helper
	functions; potentially new header for those helpers.

2017-12-17  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add JSON support for '-g all', '-l scterc' and
	'-l scttemp'.

	ataprint.cpp: Don't print obsolete SCT Support Level (#940).

2017-12-14  Christian Franke  <franke@computer.org>

	ataprint.cpp: JSON '-A' output: Add booleans and string for attribute
	flags.  Remove string array.  Rename table.

	ataprint.cpp: Add JSON support for '-l [x]error'.

2017-12-13  Christian Franke  <franke@computer.org>

	smartctl.cpp, smartctl.8.in: Rename '--json=a' to '--json=o'.

	smartctl.cpp: Show command line error messages in JSON output.

	ataprint.cpp: Add JSON support for '-l [x]selftest' and
	'-l directory'.

	atacmds.cpp, atacmds.h: Move self-test print functions to ...
	ataprint.cpp: ... here.
	smartd.cpp: Rework self-test error counting.

	ataprint.cpp: Add JSON support for '-c'.

	atacmds.cpp, atacmds.h: Change return type of capability checks to
	bool.  Declare simple checks inline.

2017-12-07  Christian Franke  <franke@computer.org>

	json.cpp: Avoid 'cbegin()' and 'cend()' to fix build with older
	libstdc++.

	json.cpp, json.h, smartctl.cpp, smartctl.8.in: Add '--json=s' option.
	Outputs JSON object elements sorted by key.
	Add '--json=g' option.  Outputs JSON structure suitable for grep.

2017-12-05  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add JSON support for '-l sataphy'.

	smartctl.cpp: Add JSON support for '--scan'.