@@ -2,6 +2,14 @@ $Id$
 
 2017-12-27  Douglas Gilbert  <dgilbert@interlog.com>
 
+	nvmecmds.cpp: according to NVMe 1.3a spec, the SMART/
+	health information log page is global and should take
+	the global nsid (all ff_s). It also says the Error
+	info lpage is "global. Broke WD Black PCIe (NVMe)
+	SSD but worked on Intel SSDs. Fix; could break others.
+
+2017-12-27  Douglas Gilbert  <dgilbert@interlog.com>
+
 	os_freebsd.cpp: on error was setting set_nvme_err() to 1,
 	not the actual NVMe status value; fix.
 
